# dx2

./: .pre-commit-config.yaml
dx2/: CMakeLists.txt  predict.cxx  predict.py
include/dx2/: beam.hpp  detector.hpp  experiment.h  experiment.hpp  reflection.hpp  scan.hpp
include/dx2/predict/: predict.hpp
